--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ twitter_username:
 github_username: cocopo-codes
 
 # Build settings
-theme: pages-themes/primer@v0.2.0
+theme: jekyll-theme-primer
 plugins:
   - jekyll-remote-feed
   - jekyll-feed
