Revert "changing the theme"
This reverts commit 1c537c04987c15a6576053754967e113e58c9f3a.

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ twitter_username:
 github_username: cocopo-codes
 
 # Build settings
-theme: just-the-docs
+theme: jekyll-theme-primer
 plugins:
   - jekyll-remote-feed
   - jekyll-feed
